TDI-29032 : Babili update for trunk
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@115583 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_en.properties
@@ -54,3 +54,5 @@ HadoopClusterForm.check.namenodePrincipal.invalid=Namenode Principal is invalid
 HadoopClusterForm.check.keytabPrincipal=Principal must be specified
 HadoopClusterForm.check.keytabPrincipal.invalid=Principal is invalid
 HadoopClusterForm.check.keytab=Keytab must be specified
+HadoopClusterForm.check.jobtrackerURI2={0} must be specified
+HadoopClusterForm.check.jobtrackerURI.invalid2={0} is invalid
