--- a/org.talend.repository.hcatalog.nl/src/messages_fr.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_fr.properties
@@ -70,3 +70,4 @@ HCatalogForm.check.port.invalid=Port invalide
 HCatalogForm.check.userName.invalid=L'utilisateur est invalide
 HCatalogForm.check.krbPrincipal.invalid=Le Principal est invalide
 HCatalogForm.check.database.invalid=Base de données invalide
+HCatalogTableSelectorForm.cannotExtractPartitionsWarn=Impossible d'extraire les partitions de la table "{0}".
