--- a/org.talend.repository.hcatalog.nl/src/messages_zh_CN.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_zh_CN.properties
@@ -28,7 +28,7 @@ HCatalogSchemaForm.button.removeSchema=\u79FB\u9664\u56FE\u89E3
 HCatalogSchemaForm.text.name=\u4f5c\u4e1a\u540d
 HCatalogSchemaForm.text.comment=\u5217\u6CE8\u91CA
 HCatalogSchemaForm.group.schema.title=\u67B6\u6784
-HCatalogSchemaForm.tableNavigator.tableColumn=\u540E\u8FD0\u884C
+HCatalogSchemaForm.tableNavigator.tableColumn=\u8868\u683C
 HCatalogSchemaForm.title.confirmChange=\u786e\u5b9a\u4fee\u6539\uff1f
 CreateHCatalogSchemaAction.createLabel=\u521b\u5efa Schema
 CreateHCatalogSchemaAction.editLabel=\u7f16\u8f91 Schema
