--- a/org.talend.repository.hdfs.nl/src/messages_zh_CN.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_zh_CN.properties
@@ -26,7 +26,7 @@ HDFSSchemaForm.button.removeSchema=\u79FB\u9664\u56FE\u89E3
 HDFSSchemaForm.text.name=\u4f5c\u4e1a\u540d
 HDFSSchemaForm.text.comment=\u5217\u6CE8\u91CA
 HDFSSchemaForm.group.schema.title=\u67B6\u6784
-HDFSSchemaForm.tableNavigator.tableColumn=\u540E\u8FD0\u884C
+HDFSSchemaForm.tableNavigator.tableColumn=\u8868\u683C
 HDFSSchemaForm.title.confirmChange=\u786e\u5b9a\u4fee\u6539\uff1f
 CreateHDFSSchemaAction.createLabel=\u521b\u5efa Schema
 CreateHDFSSchemaAction.editLabel=\u7f16\u8f91 Schema
