--- a/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
+++ b/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
@@ -41,3 +41,11 @@ HadoopClusterForm.check.namenodeURI.invalid=L'URI du NameNode est invalide
 HadoopClusterForm.check.jobtrackerURI.invalid=L'URI du {0} est invalide
 HadoopClusterForm.check.userName.invalid=L'utilisateur est invalide
 HadoopClusterForm.check.group.invalid=Le groupe est invalide
+HadoopClusterForm.useYarn=Utiliser YARN
+HadoopClusterForm.text.resourceManager=Gestionnaire de ressources
+HadoopClusterForm.text.keytabPrincipal=Principal
+HadoopClusterForm.check.namenodePrincipal.invalid=Le Principal du NameNode est invalide
+HadoopClusterForm.check.keytabPrincipal=Le Principal doit être spécifié
+HadoopClusterForm.check.keytabPrincipal.invalid=Le Principal est invalide
+HadoopClusterForm.check.jobtrackerURI2={0} doit être spécifié
+HadoopClusterForm.check.jobtrackerURI.invalid2={0} est invalide
