TDI-29032 : Babili update for trunk(TOS)
git-svn-id: http://talendforge.org/svn/tos/trunk@115752 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler.nl/src/messages_ja.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_ja.properties
@@ -32,6 +32,8 @@ TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_HOUR=\u6642
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_DAY=\u65E5
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_WEEK=\u9031
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_MONTH=\u6708
+TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_DAY=\u7D42\u4E86\u65E5
+TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_MONTH=\u7D42\u4E86\u6708
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_NONE=\u306A\u3057
 TOozieUIConstants_LBL_version_group=\u30D0\u30FC\u30B8\u30E7\u30F3
 TOozieUIConstants_LBL_connection_group=\u63A5\u7D9A
