TDI-29032 : Babili update for trunk(TOS)
git-svn-id: http://talendforge.org/svn/tos/trunk@115759 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tBigQueryBulkExec/tBigQueryBulkExec_messages_fr.properties
+++ b/org.talend.designer.components.bigdata/components/tBigQueryBulkExec/tBigQueryBulkExec_messages_fr.properties
@@ -1,3 +1,4 @@
+LONG_NAME=Se connecte à Google BigQuery et y charge des données efficacement depuis un fichier
 HELP=org.talend.help.tBigQueryBulkExec
 CLIENT_ID.NAME=ID client
 CONNECTION.NAME=Connexion
