--- a/org.talend.designer.components.bigdata/components/tBigQueryOutput/tBigQueryOutput_messages_zh_CN.properties
+++ b/org.talend.designer.components.bigdata/components/tBigQueryOutput/tBigQueryOutput_messages_zh_CN.properties
@@ -9,7 +9,7 @@ FLUSHONROW_NUM.NAME=\u7F13\u51B2\u7684\u884C\u6570
 CLIENT_ID.NAME=\u5BA2\u6237\u7F16\u53F7
 CONNECTION.NAME=\u8FDE\u63A5
 SCHEMA.NAME=\u67B6\u6784
-TABLE.NAME=\u540E\u8FD0\u884C
+TABLE.NAME=\u8868\u683C
 ACTION_ON_DATA.NAME=\u6570\u636E\u64CD\u4F5C
 ACTION_ON_DATA.ITEM.APPEND=\u8FFD\u52A0
 ACTION_ON_DATA.ITEM.EMPTY=\u7a7a
