--- a/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_ja.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_ja.properties
@@ -16,6 +16,7 @@ ACTION_ON_KEYSPACE.ITEM.DROP_IF_EXISTS_AND_CREATE=Keyspace\u304C\u5B58\u5728\u30
 ACTION_ON_KEYSPACE.ITEM.NONE=\u306A\u3057
 ACTION_ON_KEYSPACE.NAME=Keyspace\u64CD\u4F5C
 BATCH_SIZE.NAME=\u30D0\u30C3\u30C1\u30B5\u30A4\u30BA
+COLUMN_FAMILY.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA
 COLUMN_FAMILY_CONFIGURATION.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA\u8A2D\u5B9A
 COLUMN_FAMILY_TYPE.ITEM.STANDARD=\u6A19\u6E96
 COLUMN_FAMILY_TYPE.ITEM.SUPER=\u30B9\u30FC\u30D1\u30FC
