--- a/org.talend.designer.components.bigdata/components/tCouchDBInput/tCouchDBInput_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchDBInput/tCouchDBInput_messages_pl.properties
@@ -11,6 +11,7 @@ VIEW.NAME=Widok
 GROUP.NAME=Grupa
 LIMIT.NAME=Limit
 OPTIONS.NAME=Opcje
+OPTIONS.ITEM.PARAMETER=Parametr
 OPTIONS.ITEM.VALUE=Warto\u015B\u0107
 MAPPING.NAME=Mapowanie
 OUTPUT.LINK=G\u0142ówny
