--- a/org.talend.designer.components.bigdata/components/tCouchDBReadConf/tCouchDBReadConf_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchDBReadConf/tCouchDBReadConf_messages_pl.properties
@@ -11,4 +11,5 @@ VIEW.NAME=Widok
 GROUP.NAME=Grupa
 LIMIT.NAME=Limit
 OPTIONS.NAME=Opcje
+OPTIONS.ITEM.PARAMETER=Parametr
 OPTIONS.ITEM.VALUE=Warto\u015B\u0107
