--- a/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages_pl.properties
@@ -5,6 +5,7 @@ HBASE_PARAMETERS.ITEM.PROPERTY=W\u0142a\u015Bciwo\u015B\u0107
 HBASE_PARAMETERS.ITEM.VALUE=Warto\u015B\u0107
 TABLE.NAME=Nazwa tabeli
 MAPPING.NAME=Mapowanie
+MAPPING.ITEM.COLUMN=Kolumna
 VERSION.NAME=Wersja
 FILTER.NAME=filtr
 FILTER.ITEM.FILTER_OPERATOR.ITEM.GREATER=>
