--- a/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages_zh_CN.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages_zh_CN.properties
@@ -1,5 +1,5 @@
 VERSION.NAME=\u7248\u672C
-TABLE_NAME.NAME=\u540E\u8FD0\u884C
+TABLE_NAME.NAME=\u8868\u683C
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=\u5C5E\u6027
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=\u503c
 DIE_ON_ERROR.NAME=\u9519\u8bef\u65f6\u7ec8\u6b62
