--- a/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages_pl.properties
@@ -1,6 +1,7 @@
 VERSION.NAME=Wersja
 TABLE_NAME.NAME=Tabela
 OPERATION_ON.ITEM.OP_TABLE=Tabela
+OPERATION.NAME=Operacja
 TABLE_COMMENT.NAME=Komentarz
 TEMPLETON_PROPERTIES.NAME=W\u0142a\u015Bciwo\u015Bci
 TEMPLETON_PROPERTIES.ITEM.VALUE=Warto\u015B\u0107
