--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages_ja.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages_ja.properties
@@ -51,3 +51,5 @@ HIVE_SERVER.NAME=Hive\u30B5\u30FC\u30D0
 HIVE_SERVER.ITEM.HIVE=Hive 1
 HIVE_SERVER.ITEM.HIVE2=Hive 2
 CUSTOM_COMMON_SETTINGS.NAME=\u57FA\u672C\u8A2D\u5B9A\u7DE8\u96C6
+ADVANCED_PROPERTIES.NAME=Hive\u30D7\u30ED\u30D1\u30C6\u30A3
+ADVANCED_PROPERTIES.ITEM.PROPERTY=\u30D7\u30ED\u30D1\u30C6\u30A3
