--- a/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_pl.properties
@@ -1,5 +1,6 @@
 COMMAND.NAME=Komenda
 CONNECTION.NAME=Po\u0142\u0105czenie
+FUNCTION.NAME=Funkcja
 HOST.NAME=Serwer
 PASSWORD.NAME=Has\u0142o
 PORT.NAME=Port
