--- a/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages_pl.properties
@@ -6,6 +6,7 @@ DATA_ACTION.ITEM.INSERT_OR_UPDATE=Wstaw lub aktualizuj
 DATA_ACTION.ITEM.UPDATE=aktualizuj
 DATA_ACTION.ITEM.UPDATE_OR_INSERT=Aktualizuj lub wstaw
 DATA_ACTION.ITEM.DELETE=Usu\u0144
+INDEX_LOOKUP.NAME=Indeks
 MAP.NAME=Mapowanie
 COMMIT_EVERY.NAME=Zapisz wszystko
 CONNECTION_GROUP.NAME=Po\u0142\u0105czenie
