--- a/org.talend.designer.components.bigdata/components/tNeo4jRow/tNeo4jRow_messages_en.properties
+++ b/org.talend.designer.components.bigdata/components/tNeo4jRow/tNeo4jRow_messages_en.properties
@@ -23,3 +23,4 @@ NB_RELATIONSHIP_INSERTED.NAME=Number of created relationships
 NB_PROPERTY_UPDATED.NAME=Number of updated properties
 NB_NODE_DELETED.NAME=Number of deletes nodes
 NB_RELATIONSHIP_DELETED.NAME=Number of delete relationships
+COMMIT_EVERY.NAME=Commit every
