--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages_zh_CN.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages_zh_CN.properties
@@ -1,7 +1,7 @@
 MODE.NAME=\u4F20\u8F93\u65B9\u5F0F
 LOCAL.NAME= \u672C\u5730
 PIG_VERSION.NAME=\u7248\u672C
-TABLE_NAME.NAME=\u540E\u8FD0\u884C
+TABLE_NAME.NAME=\u8868\u683C
 FIELD_SEPARATOR_CHAR.NAME=\u5b57\u6bb5\u5206\u9694\u7b26
 ADVANCED_PROPERTIES.ITEM.PROPERTY=\u5C5E\u6027
 ADVANCED_PROPERTIES.ITEM.VALUE=\u503c
