--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages_zh_CN.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages_zh_CN.properties
@@ -1,5 +1,5 @@
 FIELD_SEPARATOR_CHAR.NAME=\u5b57\u6bb5\u5206\u9694\u7b26
-TABLE_NAME.NAME=\u540E\u8FD0\u884C
+TABLE_NAME.NAME=\u8868\u683C
 DRIVER_JAR.ITEM.JAR_NAME=Lib\u8DEF\u5F84
 HBASE_TABLE.NAME=\u6570\u636e\u8868
 MAPPING.NAME=\u6620\u5c04
