--- a/org.talend.designer.components.bigdata/components/tRiakOutput/tRiakOutput_messages_fr.properties
+++ b/org.talend.designer.components.bigdata/components/tRiakOutput/tRiakOutput_messages_fr.properties
@@ -6,5 +6,7 @@ DATA_ACTION.ITEM.UPSERT=Upsert
 DELETE_NB_LINE.NAME=Supprimer un nombre de lignes
 DIE_ON_ERROR.NAME=Arrêter en cas d'erreur
 HELP=org.talend.help.tRiakOutput
+KEY.NAME=Colonne clé
+LONG_NAME=Effectue un upsert ou un delete dans un bucket Riak
 UPSERT_NB_LINE.NAME=Insérer et mettre à jour un nombre de lignes
 USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
