--- a/org.talend.designer.components.bigdata/components/tSAPHanaOutput/tSAPHanaOutput_messages_fr.properties
+++ b/org.talend.designer.components.bigdata/components/tSAPHanaOutput/tSAPHanaOutput_messages_fr.properties
@@ -39,6 +39,7 @@ USE_FIELD_OPTIONS.NAME=Utiliser les options de champs
 FIELD_OPTIONS.NAME=Options de champ
 TABLESCHEMA.NAME=Schéma de la table
 USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
+ENABLE_DEBUG_MODE.NAME=Activer le mode débogage
 NB_LINE_UPDATED.NAME=Nombre de lignes mises à jour
 NB_LINE_INSERTED.NAME=Nombre de lignes insérées
 NB_LINE_DELETED.NAME=Nombre de lignes supprimées
