--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages_pl.properties
@@ -1,6 +1,7 @@
 CONNECTION.NAME=Po\u0142\u0105czenie
 TABLE.NAME=Nazwa tabeli
 PASSWORD.NAME=Has\u0142o
+COLUMNS.ITEM.COLUMN=Kolumna
 APPEND.NAME=Dodawanie
 COMPRESS.NAME=Skompresuj
 ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT=Argument
