--- a/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages_en.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages_en.properties
@@ -122,3 +122,10 @@ DB_VERSION.ITEM.MAPR301=MapR 3.0.1 (Sqoop 1.4.2)
 DB_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 MAPRED_JOB_MAP_MEMORY_MB.NAME=Mapred job map memory mb
 MAPRED_JOB_REDUCE_MEMORY_MB.NAME=Mapred job reduce memory mb
+MEMORY_PARAMETERS.NAME=Job memory parameters
+SET_SCHEDULER_ADDRESS.NAME=Set resourcemanager scheduler address
+SET_MEMORY.NAME=Set memory
+MAPREDUCE_MAP_MEMORY_MB.NAME=Map (in Mb)
+MAPREDUCE_REDUCE_MEMORY_MB.NAME=Reduce (in Mb)
+YARN_APP_MAPREDUCE_AM_RESOURCE_MB.NAME=ApplicationMaster (in Mb)
+HADOOP_USER.NAME=Hadoop user name
