--- a/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages_fr.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages_fr.properties
@@ -5,6 +5,7 @@ TEMPFILE.NAME=Chemin d'accès au répertoire des données temporaires
 CLASSNAME.NAME=Nom de la classe
 JARFILE.NAME=Emplacement du fichier JAR
 NEWDATA.NAME=Nouveau répertoire de données
+ONTO.NAME=Ancien répertoire des données
 TARGETDIR.NAME=Répertoire cible
 GENERATE.NAME=Génération de fichier Jar requise
 CONNECTION.NAME=Connexion
@@ -32,6 +33,7 @@ ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--class-name=--class-name
 ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--jar-file=--jar-file
 ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--outdir=--outdir
 ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
+OUTPUT_MESSAGE.NAME=Message en sortie
 GENERATE_JAR_ADDITIONAL_JAVA.ITEM.GENERATE_JAR_ADDITIONAL_VALUE=Valeur
 GENERATE_JAR_ADDITIONAL_JAVA.ITEM.GENERATE_JAR_ADDITIONAL_ARGUMENT.ITEM.--direct-split-size=--direct-split-size
 GENERATE_JAR_ADDITIONAL_JAVA.ITEM.GENERATE_JAR_ADDITIONAL_ARGUMENT.ITEM.--inline-lob-limit=--inline-lob-limit
@@ -76,3 +78,4 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Valeur
 FOLDERS.NAME=Dossiers à fusionner
 DB_VERSION.ITEM.MAPR213=MapR 2.1.3 (Sqoop 1.4.2)
 CUSTOMCLASSNAME.NAME=Nom de la classe personnalisée
+DB_VERSION.ITEM.MAPR301=MapR 3.0.1 (Sqoop 1.4.2)
