--- a/org.talend.designer.components.bigdata/components/tBigQueryInput/tBigQueryInput_messages_ja.properties
+++ b/org.talend.designer.components.bigdata/components/tBigQueryInput/tBigQueryInput_messages_ja.properties
@@ -1,3 +1,4 @@
+LONG_NAME=Google BigQuery\u3078\u306E\u63A5\u7D9A\u3068\u30AF\u30A8\u30EA\u767A\u884C
 HELP=org.talend.help.tBigQueryInput
 CLIENT_ID.NAME=\u30AF\u30E9\u30A4\u30A2\u30F3\u30C8ID
 CLIENT_SECRET.NAME=Client Secret
