--- a/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_ja.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_ja.properties
@@ -1,3 +1,4 @@
+COLUMN_FAMILY.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA
 COLUMN_FAMILY_CONFIGURATION.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA\u8A2D\u5B9A
 COLUMN_FAMILY_TYPE.ITEM.STANDARD=\u6A19\u6E96
 COLUMN_FAMILY_TYPE.ITEM.SUPER=\u30B9\u30FC\u30D1\u30FC
