--- a/org.talend.designer.components.bigdata/components/tCassandraOutputBulkExec/tCassandraOutputBulkExec_messages_fr.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraOutputBulkExec/tCassandraOutputBulkExec_messages_fr.properties
@@ -2,6 +2,7 @@ HELP=org.talend.help.tCassandraOutputBulkExec
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+REQUIRED_AUTHENTICATION.NAME=Authentification requise
 KEY_SPACE.NAME=Keyspace
 COLUMN_FAMILY.NAME=Famille de colonnes
 PARTITIONER.ITEM.RANDOMPARTITIONER=Aléatoire
