--- a/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_ja.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_ja.properties
@@ -1,4 +1,5 @@
 CLUSTER.NAME=\u30AF\u30E9\u30B9\u30BF
+COLUMN_FAMILY.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA
 COLUMN_FAMILY_CONFIGURATION.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA\u8A2D\u5B9A
 CONNECTION.NAME=\u30B3\u30F3\u30DD\u30FC\u30CD\u30F3\u30C8\u30EA\u30B9\u30C8
 DIE_ON_ERROR.NAME=\u30A8\u30E9\u30FC\u3067\u505C\u6B62
