--- a/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages_pl.properties
@@ -7,8 +7,11 @@ CONNECTION_CONF.NAME=Po\u0142\u0105czenie
 CONNECTION.NAME=Lista komponentów
 AUTHENTICATION.NAME=Autentykacja
 USE_EXISTING_CONNECTION.NAME=U\u017Cyj istniej\u0105cego po\u0142\u0105czenia
+GROUP.ITEM.ATTRIBUTE=Atrybut
 GROUP.ITEM.VALUE=Warto\u015B\u0107 domy\u015Blna
+LOOP.ITEM.ATTRIBUTE=Atrybut
 LOOP.ITEM.VALUE=Warto\u015B\u0107 domy\u015Blna
+ROOT.ITEM.ATTRIBUTE=Atrybut
 ROOT.ITEM.VALUE=Warto\u015B\u0107 domy\u015Blna
 SCHEMA.NAME=Schemat
 DATA_ACTION.ITEM.DELETE=Usu\u0144
