--- a/org.talend.designer.components.bigdata/components/tCouchbaseOutput/tCouchbaseOutput_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseOutput/tCouchbaseOutput_messages_pl.properties
@@ -9,8 +9,11 @@ DATA_ACTION.ITEM.INSERT=Insert
 DATA_ACTION.ITEM.INSERT_OR_UPDATE=Wstaw lub aktualizuj
 DATA_ACTION.ITEM.UPDATE=aktualizuj
 DATA_ACTION.NAME=Akcja na danych
+GROUP.ITEM.ATTRIBUTE=Atrybut
 GROUP.ITEM.VALUE=Warto\u015B\u0107 domy\u015Blna
+LOOP.ITEM.ATTRIBUTE=Atrybut
 LOOP.ITEM.VALUE=Warto\u015B\u0107 domy\u015Blna
+ROOT.ITEM.ATTRIBUTE=Atrybut
 ROOT.ITEM.VALUE=Warto\u015B\u0107 domy\u015Blna
 SCHEMA.NAME=Schemat
 VALUE.NAME=Warto\u015B\u0107
