--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages_ja.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages_ja.properties
@@ -45,3 +45,6 @@ ZOOKEEPER_QUORUM.NAME=Zookeeper \u30AF\u30A9\u30FC\u30E9\u30E0
 ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper \u30AF\u30E9\u30A4\u30A2\u30F3\u30C8 \u30DD\u30FC\u30C8
 REGISTER_JAR.ITEM.JAR_NAME=Jar\u30D5\u30A1\u30A4\u30EB\u540D
 CUSTOM_COMMON_SETTINGS.NAME=\u57FA\u672C\u8A2D\u5B9A\u7DE8\u96C6
+ADVANCED_PROPERTIES.NAME=Hive\u30D7\u30ED\u30D1\u30C6\u30A3
+ADVANCED_PROPERTIES.ITEM.PROPERTY=\u30D7\u30ED\u30D1\u30C6\u30A3
+ADVANCED_PROPERTIES.ITEM.VALUE=\u5024
