--- a/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages_ja.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages_ja.properties
@@ -1,4 +1,5 @@
 HELP=org.talend.help.tHCatalogInput
+LONG_NAME=HCatalog\u304B\u3089\u306E\u30C7\u30FC\u30BF\u8AAD\u8FBC
 DISTRIBUTION.NAME=\u30C7\u30A3\u30B9\u30C8\u30EA\u30D3\u30E5\u30FC\u30B7\u30E7\u30F3
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 HCAT_VERSION.NAME=HCatalog\u30D0\u30FC\u30B8\u30E7\u30F3
