--- a/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages_zh_CN.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages_zh_CN.properties
@@ -1,7 +1,7 @@
 VERSION.NAME=\u7248\u672C
-TABLE_NAME.NAME=\u540E\u8FD0\u884C
+TABLE_NAME.NAME=\u8868\u683C
 DIE_ON_ERROR.NAME=\u9519\u8bef\u65f6\u7ec8\u6b62
-OPERATION_ON.ITEM.OP_TABLE=\u540E\u8FD0\u884C
+OPERATION_ON.ITEM.OP_TABLE=\u8868\u683C
 OPERATION.ITEM.CREATE=\u521b\u5efa\u5de5\u7a0b
 TABLE_COMMENT.NAME=\u5217\u6CE8\u91CA
 STORAGE_FORMAT.NAME=\u683C\u5F0F
