--- a/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages_en.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages_en.properties
@@ -111,3 +111,11 @@ ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 ADVANCED_PROPERTIES.ITEM.VALUE=Value
 MAPRED_JOB_MAP_MEMORY_MB.NAME=Mapred job map memory mb
 MAPRED_JOB_REDUCE_MEMORY_MB.NAME=Mapred job reduce memory mb
+NAMENODE_PRINCIPAL.NAME=Namenode principal
+JOBTRACKER_PRINCIPAL.NAME=JobTracker principal
+MEMORY_PARAMETERS.NAME=Job memory parameters
+SET_SCHEDULER_ADDRESS.NAME=Set resourcemanager scheduler address
+SET_MEMORY.NAME=Set memory
+MAPREDUCE_MAP_MEMORY_MB.NAME=Map (in Mb)
+MAPREDUCE_REDUCE_MEMORY_MB.NAME=Reduce (in Mb)
+YARN_APP_MAPREDUCE_AM_RESOURCE_MB.NAME=ApplicationMaster (in Mb)
