--- a/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages_ja.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages_ja.properties
@@ -3,6 +3,7 @@ HOST.NAME=\u30DB\u30B9\u30C8
 PORT.NAME=\u30DD\u30FC\u30C8
 DBNAME.NAME=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9
 SCHEMA.NAME=\u30B9\u30AD\u30FC\u30DE
+HIVE_VERSION.NAME=Hive\u30D0\u30FC\u30B8\u30E7\u30F3
 HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 CONNECTION_MODE.NAME=\u63A5\u7D9A\u30E2\u30FC\u30C9
 SET_MAPRED_JT.NAME=\u30B8\u30E7\u30D6\u30C8\u30E9\u30C3\u30AB\u30FCURI\u3092\u8A2D\u5B9A
@@ -20,3 +21,6 @@ SERDE_NAME.NAME=SerDe\u30AF\u30E9\u30B9\u540D
 SERDE_PROPERTIES.NAME=SerDe\u30D7\u30ED\u30D1\u30C6\u30A3
 TABLE_COMMENT.NAME=\u30C6\u30FC\u30D6\u30EB\u30B3\u30E1\u30F3\u30C8
 TABLE_PROPERTIES.NAME=\u30D7\u30ED\u30D1\u30C6\u30A3
+ADVANCED_PROPERTIES.NAME=Hive\u30D7\u30ED\u30D1\u30C6\u30A3
+ADVANCED_PROPERTIES.ITEM.PROPERTY=\u30D7\u30ED\u30D1\u30C6\u30A3
+ADVANCED_PROPERTIES.ITEM.VALUE=\u5024
