--- a/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages_pl.properties
@@ -7,6 +7,7 @@ PASSWORD.NAME=Has\u0142o
 PORT.NAME=Port
 PROPERTY.NAME=W\u0142a\u015Bciwo\u015B\u0107
 QUERY.NAME=Zapytanie
+SORT.ITEM.COLNAME=Kolumna
 SORT.ITEM.ORDER=Kolejno\u015B\u0107 malej\u0105co czy rosn\u0105co?
 AUTHENTICATION.NAME=Autentykacja
 DB_VERSION.NAME=Wersja bazy danych
