--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages_pl.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages_pl.properties
@@ -2,6 +2,7 @@ FIELD_SEPARATOR_CHAR.NAME=Separator pól
 TABLE_NAME.NAME=Tabela
 HBASE_TABLE.NAME=Nazwa tabeli
 MAPPING.NAME=Mapowanie
+MAPPING.ITEM.COLUMN=Kolumna
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME=Nazwa
 HBASESTORAGE_PARAMETER.ITEM.PARAM_VALUE=Warto\u015B\u0107
 HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LIMIT=Limit
