--- a/org.talend.designer.components.bigdata/components/tRiakKeyList/tRiakKeyList_messages_fr.properties
+++ b/org.talend.designer.components.bigdata/components/tRiakKeyList/tRiakKeyList_messages_fr.properties
@@ -3,5 +3,6 @@ CONNECTION_CONFIG.NAME=Connexion
 CONNECTION.NAME=Liste des composants
 HELP=org.talend.help.tRiakKeyList
 LONG_NAME=Liste les clés dans un Bucket Riak
+NODES.NAME=N\u0153uds
 NODES.ITEM.RIAK_PATH=Chemin Riak
 USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
