--- a/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages_ja.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages_ja.properties
@@ -84,3 +84,4 @@ DB_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 DB_VERSION.ITEM.MAPR1=MapR 1.2.0 (Sqoop 1.3)
 DB_VERSION.ITEM.MAPR212=MapR 2.1.2 (Sqoop 1.4.2)
 DISTRIBUTION.ITEM.CUSTOM=\u30AB\u30B9\u30BF\u30E0 - \u975E\u30B5\u30DD\u30FC\u30C8
+HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop \u30D7\u30ED\u30D1\u30C6\u30A3
