TBD-115 : Add "check" port option to big data configuration

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -34,6 +34,7 @@ HadoopClusterForm.text.keytabPrincipal=Principal
 HadoopClusterForm.text.userName=User name
 HadoopClusterForm.text.group=Group
 HadoopClusterForm.text.keytab=Keytab
+HadoopClusterForm.button.check=Check Services
 HadoopClusterForm.check.distribution=Distribution must be specified
 HadoopClusterForm.check.version=Version must be specified
 HadoopClusterForm.check.authentication=Authentication must be specified
