--- a/main/plugins/org.talend.designer.hdfsbrowse/src/messages.properties
+++ b/main/plugins/org.talend.designer.hdfsbrowse/src/messages.properties
@@ -8,3 +8,14 @@ HDFSBrowseDialog.button.collapseAll=Collapse All
 AbstractHDFSBrowseController.connectionFailure.mainMsg=Connection failure. You must change the HDFS Settings.
 AbstractHDFSBrowseController.connectionFailure.detailMsg=Cannot connect to HDFS "{0}". Please check the connection parameters.
 AbstractHDFSBrowseController.checkConnection=Checking HDFS connection...
+
+CheckHadoopServicesDialog.title=Checking Hadoop Services
+CheckHadoopServicesDialog.msg=Checking the hadoop services below.
+CheckHadoopServicesDialog.table.service=Service
+CheckHadoopServicesDialog.table.progress=Progress And Status
+CheckHadoopServicesDialog.table.status=Status
+CheckHadoopServicesDialog.button.check=Check Again
+CheckHadoopServicesDialog.tab.services.title=Services
+CheckHadoopServicesDialog.tab.exceptions.title=Exceptions of {0}
+CheckHadoopServicesDialog.tab.exceptions.desc=The error log of service "{0}":
+CheckHadoopServicesDialog.status.error.desc=<a>Error log</a>
