TBD-949 : Tune HCatalog to adapt HD Insight.

--- a/main/plugins/org.talend.repository.hcatalog/src/messages.properties
+++ b/main/plugins/org.talend.repository.hcatalog/src/messages.properties
@@ -44,6 +44,7 @@ HCatalogForm.templetonSettings=Templeton Settings
 HCatalogForm.text.host=Host name
 HCatalogForm.text.port=Port
 HCatalogForm.text.userName=User name
+HCatalogForm.text.password=Password
 HCatalogForm.text.krbPrincipal=Principal
 HCatalogForm.text.krbRealm=Realm
 HCatalogForm.check.host=Host name must be specified
@@ -51,6 +52,7 @@ HCatalogForm.check.host.invalid=Host name is invalid
 HCatalogForm.check.port=Port must be specified
 HCatalogForm.check.port.invalid=Port is invalid
 HCatalogForm.check.userName=User name must be specified
+HCatalogForm.check.password=Password must be specified
 HCatalogForm.check.userName.invalid=User name is invalid
 HCatalogForm.check.krbPrincipal=Principal must be specified
 HCatalogForm.check.krbPrincipal.invalid=Principal is invalid
