TBD-980 feature: Support AVRO Schema import and export to Talend MR jobs https://jira.talendforge.org/browse/TBD-980
1. Add support for UNION type:

(a) primitives – {"type": "boolean"}

(b) but also a union of null with a primitive for isNullable types –
{"type": ["boolean", "null"]}

The isNullable metadata should be determined from whether null is in the
schema.

2. Fix an UI bug

--- a/main/plugins/org.talend.repository.hdfs/src/messages.properties
+++ b/main/plugins/org.talend.repository.hdfs/src/messages.properties
@@ -79,7 +79,7 @@ HDFSSchemaForm.checkSchema.errorDialog.title=Error
 HDFSSchemaForm.retrieveSchema.checkSchema.errorStatus=Error
 HDFSSchemaForm.retrieveSchema.checkSchema.errorMessage.duplicatedColumns=Duplicated columns: 
 HDFSSchemaForm.retrieveSchema.checkSchema.seeLogBelow=Please see the Log below
-HDFSSchemaForm.retrieveSchema.checkSchema.errorButton=[...]
+HDFSSchemaForm.retrieveSchema.checkSchema.errorButton.text=...
 HDFSSchemaForm.retrieveSchema.checkSchema.errorButton.toolTipText=See more details
 
 CreateHDFSSchemaAction.createLabel=Retrieve Schema
