TBD-949 : add hd insight version for hadoop cluster and fix hcatalog bugs on that.

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -55,6 +55,35 @@ HadoopClusterForm.check.group=Group must be specified
 HadoopClusterForm.check.group.invalid=Group is invalid
 HadoopClusterForm.check.checkConnection=You must press the Check Button to check the HadoopCluster Setting
 
+HadoopClusterForm.webHCatSettings=WebHCat configuration
+HadoopClusterForm.text.webHCat.hostname=Host name
+HadoopClusterForm.text.webHCat.port=Port
+HadoopClusterForm.text.webHCat.username=User name
+HadoopClusterForm.text.webHCat.jobResultFolder=Job result folder
+
+HadoopClusterForm.hdiSettings=HD Insight configuration
+HadoopClusterForm.text.hdi.username=User name
+HadoopClusterForm.text.hdi.password=Password
+
+HadoopClusterForm.azureSettings=Windows Azure Storage configuration
+HadoopClusterForm.text.azure.hostname=Host name
+HadoopClusterForm.text.azure.container=Container
+HadoopClusterForm.text.azure.username=User name
+HadoopClusterForm.text.azure.password=Password
+HadoopClusterForm.text.azure.deployBlob=Deployment Blob
+
+HadoopClusterForm.check.webHCat.hostname=Host name must be specified
+HadoopClusterForm.check.webHCat.port=Port must be specified
+HadoopClusterForm.check.webHCat.username=User name must be specified
+HadoopClusterForm.check.webHCat.jobResultFolder=Job result folder must be specified 
+HadoopClusterForm.check.hdi.username=User name must be specified 
+HadoopClusterForm.check.hdi.password=Password must be specified
+HadoopClusterForm.check.azure.hostname=Host name must be specified
+HadoopClusterForm.check.azure.container=Container must be specified
+HadoopClusterForm.check.azure.username=User name must be specified
+HadoopClusterForm.check.azure.password=Password must be specified
+HadoopClusterForm.check.azure.deployBlob=Deployment Blob must be specified
+
 EditHadoopClusterPropertiesAction.editLabel=Edit properties
 EditHadoopClusterPropertiesAction.tooltip=Edit properties
 
