--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages_en.properties
@@ -4,7 +4,7 @@ SCHEMA.NAME=Schema
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_1_X=Cassandra 2.1.X
 HOST.NAME=Host
 PORT.NAME=Port
 REQUIRED_AUTHENTICATION.NAME=Required authentication
