--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -130,8 +130,7 @@ noSQLRepositoryTranslator.MONGODB_2_6_X=MongoDB 2.6.X
 noSQLRepositoryTranslator.CASSANDRA=Cassandra
 noSQLRepositoryTranslator.CASSANDRA_1_1_2=Cassandra 1.1.2
 noSQLRepositoryTranslator.CASSANDRA_1_2_2=Cassandra 1.2.2
-noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.0
-noSQLRepositoryTranslator.CASSANDRA_2_0_8=Cassandra 2.0.8
+noSQLRepositoryTranslator.CASSANDRA_2_1_X=Cassandra 2.1.X
 
 noSQLRepositoryTranslator.NEO4J=Neo4j
 
