[TBD-1073] Revert versionning of Cassandra from 2.1.X to 2.0.0 and 2.0.8 in order to keep the retrocompatibility.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_en.properties
@@ -48,6 +48,8 @@ USE_EXISTING_CONNECTION.NAME=Use existing connection
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_8=Cassandra 2.0.8
 DB_VERSION.ITEM.CASSANDRA_2_1_X=Cassandra 2.1.X
 COMPARATOR.NAME=Column name comparator
 COMPARATOR.ITEM.ASCIITYPE=AsciiTYPE
@@ -57,4 +59,3 @@ COMPARATOR.ITEM.LONGTYPE=LongType
 COMPARATOR.ITEM.TIMEUUIDTYPE=TimeUUIDType
 COMPARATOR.ITEM.UTF8TYPE=UTF8Type
 DEFINE_CF_STRUCTS.NAME=Define column family structure
-DB_VERSION.ITEM.CASSANDRA_2_1_X=Cassandra 2.1.X
