TBD-1073 Proper revert to be compatible with Cassandra jobs designed in >=v5.5
CASSANDRA_2_0_0 was maintained, CASSANDRA_2_0_8 and CASSANDRA_2_1_X dropped
messages behind CASSANDRA_2_0_0 rephrased to "Cassandra 2.0.x/2.1.x"

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_en.properties
@@ -61,9 +61,7 @@ SUPER_COLUMN_TYPE.ITEM.SHORT=Short
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
-DB_VERSION.ITEM.CASSANDRA_2_0_8=Cassandra 2.0.8
-DB_VERSION.ITEM.CASSANDRA_2_1_X=Cassandra 2.1.X
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
 ROW_KEY_TYPE.ITEM.BIGDECIMAL=BigDecimal
 ROW_KEY_C_TYPE.NAME=Row key Cassandra type
 ROW_KEY_C_TYPE.ITEM.DEFAULT=Default
