TDI-30687 : NoSQL: Neo4j Local connection shouldn't be checked successfully when Local database path is invalid

--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -110,6 +110,7 @@ Neo4jConnectionUtil.cannotConnectDatabase=Cannot connect to database!
 Neo4jConnForm.button.localDB.label=Local
 Neo4jConnForm.button.remoteDB.label=Remote
 Neo4jConnForm.dbPath.label=Database path
+Neo4jConnForm.absPath.label=Absolute path
 Neo4jConnForm.serverURL.label=Server URL
 Neo4jConnForm.validate.invalidDbPath=Database path must be specified
 Neo4jConnForm.validate.invalidServerURL=Server URL must be specified
