--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -29,6 +29,8 @@ HadoopClusterForm.text.resourceManager=Resource Manager
 HadoopClusterForm.authenticationSettings=Authentication
 HadoopClusterForm.button.kerberos=Enable kerberos security
 HadoopClusterForm.text.namenodePrincipal=Namenode Principal
+HadoopClusterForm.text.jtPrincipal=Jobtracker Principal
+HadoopClusterForm.text.rmPrincipal=Resource Manager Principal
 HadoopClusterForm.button.keytab=Use a keytab to authenticate 
 HadoopClusterForm.text.keytabPrincipal=Principal
 HadoopClusterForm.text.userName=User name
@@ -46,6 +48,8 @@ HadoopClusterForm.check.jobtrackerURI.invalid={0} is invalid
 HadoopClusterForm.check.jobtrackerURI.invalid2={0} is invalid
 HadoopClusterForm.check.namenodePrincipal=Namenode Principal must be specified
 HadoopClusterForm.check.namenodePrincipal.invalid=Namenode Principal is invalid
+HadoopClusterForm.check.jtOrRmPrincipal={0} must be specified
+HadoopClusterForm.check.jtOrRmPrincipal.invalid={0} is invalid
 HadoopClusterForm.check.keytabPrincipal=Principal must be specified
 HadoopClusterForm.check.keytabPrincipal.invalid=Principal is invalid
 HadoopClusterForm.check.keytab=Keytab must be specified
