[TBD-1112] Fix dependency problem on tNeo4jInput Fix scope problem on variables on tNeo4JOutputRelationship Add properties.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jConnection/tNeo4jConnection_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jConnection/tNeo4jConnection_messages_en.properties
@@ -8,3 +8,7 @@ DATABASE_PATH.NAME=Database path
 SERVER_URL.NAME=Server URL
 READ_ONLY_MODE.NAME=Read only
 CONNECTION_GROUP.NAME=Connection
+
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
+DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.X.X
