--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jConnection/tNeo4jConnection_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jConnection/tNeo4jConnection_messages_fr.properties
@@ -7,3 +7,7 @@ REMOTE_SERVER.NAME=Utiliser un serveur distant
 SERVER_URL.NAME=URL du serveur
 READ_ONLY_MODE.NAME=Lecture seule
 CONNECTION_GROUP.NAME=Connexion
+
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
+DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.X.X
