--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jInput/tNeo4jInput_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jInput/tNeo4jInput_messages_fr.properties
@@ -11,3 +11,7 @@ SCHEMA_FLOW.NAME=Schéma
 MAPPING.ITEM.RETURN_PARAMETER=Paramètre de retour
 MAPPING.NAME=Mapping
 CONNECTION_GROUP.NAME=Connexion
+
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
+DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.X.X
