[TBD-455] Set option "Import json array" on tMongoDBBulkLoad.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages_en.properties
@@ -35,3 +35,4 @@ UPSERT_FIELDS.NAME=Upsert fields
 USERNAME.NAME=Username
 USE_LOCAL_DBPATH.NAME=Use local DB path
 USE_REPLICA_SET.NAME=Use replica set address
+JSON_ARRAY.NAME=The Json file start with an array
