TBD-1138 : for drag and drop

--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -134,8 +134,8 @@ noSQLRepositoryTranslator.CASSANDRA_1_2_2=Cassandra 1.2.2
 noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.x/2.1.x
 
 noSQLRepositoryTranslator.Neo4=Neo4J
-noSQLRepositoryTranslator.Neo4J_1_X_X=Neo4J 1.X.X
-noSQLRepositoryTranslator.Neo4J_2_X_X=Neo4J 2.X.X
+noSQLRepositoryTranslator.NEO4J_1_X_X=Neo4J 1.X.X
+noSQLRepositoryTranslator.NEO4J_2_1_X=Neo4J 2.1.X
 
 noSQLRepositoryTranslator.NEO4J=Neo4j
 
