--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -47,6 +47,7 @@ CassandraConnForm.dbVersionTip=Set database version
 CassandraConnForm.keyspace=Keyspace
 CassandraConnForm.password=Password
 CassandraConnForm.port=Port
+CassandraConnForm.port.instruction=The Port will be used only for the setup of component. When retrieving the metadata \nit will use the CQL native transport port which is 9042 by default.
 CassandraConnForm.requireAuth=Require authentication
 CassandraConnForm.server=Server
 CassandraConnForm.username=Username
