--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -47,7 +47,7 @@ CassandraConnForm.dbVersionTip=Set database version
 CassandraConnForm.keyspace=Keyspace
 CassandraConnForm.password=Password
 CassandraConnForm.port=Port
-CassandraConnForm.port.instruction=The Port will be used only for the setup of component. When retrieving the metadata \nit will use the CQL native transport port which is 9042 by default.
+CassandraConnForm.port.instruction=This port is only for connection setup in components. When retrieving metadata \nthe default CQL native transport port 9042 will be used.
 CassandraConnForm.requireAuth=Require authentication
 CassandraConnForm.server=Server
 CassandraConnForm.username=Username
