TBD-1281: Add warning message on hadoop cluster wizard for check services

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -37,6 +37,8 @@ HadoopClusterForm.text.userName=User name
 HadoopClusterForm.text.group=Group
 HadoopClusterForm.text.keytab=Keytab
 HadoopClusterForm.button.check=Check Services
+HadoopClusterForm.checkServices.warning1=Note that the check of services may fail if the connection needs some specific Hadoop properties,
+HadoopClusterForm.checkServices.warning2=such as Kerberos options, to be configured.
 HadoopClusterForm.check.distribution=Distribution must be specified
 HadoopClusterForm.check.version=Version must be specified
 HadoopClusterForm.check.authentication=Authentication must be specified
