TBD-1204 fix bug: Check HDFS connection block the studio https://jira.talendforge.org/browse/TBD-1204

--- a/main/plugins/org.talend.repository.hdfs/src/messages.properties
+++ b/main/plugins/org.talend.repository.hdfs/src/messages.properties
@@ -87,4 +87,4 @@ CreateHDFSSchemaAction.editLabel=Edit Schema
 CreateHDFSSchemaAction.connectionFailure.mainMsg=Connection failure. You must change the HDFS Settings.
 CreateHDFSSchemaAction.connectionFailure.detailMsg=Cannot connect to HDFS. Please check the connection parameters.
 CreateHDFSSchemaAction.checkConnection=Checking HDFS connection...
-
+AbstractHDFSForm.checkConnection.executeMessage=Checking connection...
