--- a/main/plugins/org.talend.repository.hdfs/src/messages.properties
+++ b/main/plugins/org.talend.repository.hdfs/src/messages.properties
@@ -88,3 +88,7 @@ CreateHDFSSchemaAction.connectionFailure.mainMsg=Connection failure. You must ch
 CreateHDFSSchemaAction.connectionFailure.detailMsg=Cannot connect to HDFS. Please check the connection parameters.
 CreateHDFSSchemaAction.checkConnection=Checking HDFS connection...
 AbstractHDFSForm.checkConnection.executeMessage=Checking connection...
+HDFSFileSelectorForm.confirm.executeConfirm=You have select more than {0} items, it will use large resources if you continue to do this;\nDo you still want to continue this?
+HDFSFileSelectorForm.checkingItems=Checking items...
+HDFSFileSelectorForm.confirm.yesToAll=Yes to all
+HDFSFileSelectorForm.confirm.noToAll=No to all
