TBD-1346: Can't dataviewer for hcatalog which has partition

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -90,6 +90,12 @@ HadoopClusterForm.check.azure.username=User name must be specified
 HadoopClusterForm.check.azure.password=Password must be specified
 HadoopClusterForm.check.azure.deployBlob=Deployment Blob must be specified
 
+AbstractHadoopSubForm.separatorSettings=Separator Settings
+AbstractHadoopSubForm.rowSeparator=Row Separator
+AbstractHadoopSubForm.rowSeparator.tooltip=Set the row separator
+AbstractHadoopSubForm.fieldSeparator=Field Separator
+AbstractHadoopSubForm.fieldSeparator.tooltip=Set the field separator
+
 EditHadoopClusterPropertiesAction.editLabel=Edit properties
 EditHadoopClusterPropertiesAction.tooltip=Edit properties
 
