--- a/main/plugins/org.talend.repository.hcatalog/src/messages.properties
+++ b/main/plugins/org.talend.repository.hcatalog/src/messages.properties
@@ -60,6 +60,8 @@ HCatalogForm.check.krbRealm=Realm must be specified
 HCatalogForm.check.krbRealm.invalid=Realm is invalid
 HCatalogForm.check.database=Database must be specified
 HCatalogForm.check.database.invalid=Database is invalid
+HCatalogForm.check.rowSeparator=Row Separator must be specified
+HCatalogForm.check.fieldSeparator=Field Separator must be specified
 HCatalogForm.check.checkConnection=You must press the Check Button to check the HCatalog Settings
 HCatalogForm.databaseSettings=Database Settings
 HCatalogForm.text.database=Database
@@ -88,4 +90,7 @@ CreateHCatalogSchemaAction.connectionFailure.detailMsg=Cannot connect to HCatalo
 CreateHCatalogSchemaAction.checkConnection=Checking HCatalog connection...
 
 HCatalogRepositoryContentHandler.partitions=Partitions
+
+HCatalogDragAndDropHandler.dataViewer.warning.title=Warning
+HCatalogDragAndDropHandler.dataViewer.warning.msg=The non-partitioned table does not support data viewer!
 
