TBD-1148 fix bug: Can't data viewer for AVRO schema & tAvroInput https://jira.talendforge.org/browse/TBD-1148

--- a/main/plugins/org.talend.repository.hdfs/src/messages.properties
+++ b/main/plugins/org.talend.repository.hdfs/src/messages.properties
@@ -86,3 +86,6 @@ AbstractHDFSForm.checkConnection.executeMessage=Checking connection...
 HDFSFileSelectorForm.confirm.executeConfirm=More than {0} items have been selected. It may take quite a long time to retrieve the schema for all of them.\nDo you still want to continue?
 HDFSFileSelectorForm.checkingItems=Checking items...
 HDFSFileSelectorForm.tableIsExist.notShowAgain=Do not show this info again.
+
+HDFSDragAndDropHandler.dataViewer.warning.title=Warning
+HDFSDragAndDropHandler.dataViewer.warning.msg=The AVRO table does not support data viewer!
