--- a/i18n/plugins/org.talend.oozie.scheduler.nl/pom.xml
+++ b/i18n/plugins/org.talend.oozie.scheduler.nl/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.talend.studio</groupId>
     <artifactId>tbd-studio-se</artifactId>
-    <version>6.0.0-SNAPSHOT</version>
+    <version>6.0.0-M1</version>
     <relativePath>../../../</relativePath>
   </parent>
   <artifactId>org.talend.oozie.scheduler.nl</artifactId>
