--- a/main/plugins/org.talend.oozie.scheduler/src/messages.properties
+++ b/main/plugins/org.talend.oozie.scheduler/src/messages.properties
@@ -66,6 +66,5 @@ ExecuteJobComposite.Server=Server
 
 OozieMonitoringComposite.linkText=No mozilla support detected for the browser, monitoring unavailable.\n Please open the link manually: <a href=" {0} "> {1} </a>
 
-
-
-
+ExecuteJobCompositeController.doRunAction.Exception.title=Error
+ExecuteJobCompositeController.doRunAction.Exception.message=An error occured ({0}).
