TBD-1278:NoSQL: Cassandra connection wouldn't check the port valid or not in Wizard

--- a/main/plugins/org.talend.repository.nosql/src/messages.properties
+++ b/main/plugins/org.talend.repository.nosql/src/messages.properties
@@ -47,7 +47,7 @@ CassandraConnForm.dbVersionTip=Set database version
 CassandraConnForm.keyspace=Keyspace
 CassandraConnForm.password=Password
 CassandraConnForm.port=Port
-CassandraConnForm.port.instruction=This port is only for connection setup in components. When retrieving metadata \nthe default CQL native transport port 9042 will be used.
+CassandraConnForm.port.instruction=This port will not be checked by cliking "Check" below. It's only \nfor component setup and will be checked only at job execution.
 CassandraConnForm.requireAuth=Require authentication
 CassandraConnForm.server=Server
 CassandraConnForm.username=Username
