TBD-1265 fix bug: Properties not brought to MapRed Run tab Hadoop Configuration https://jira.talendforge.org/browse/TBD-1265
Add the job history principal to the wizard

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -31,6 +31,7 @@ HadoopClusterForm.button.kerberos=Enable kerberos security
 HadoopClusterForm.text.namenodePrincipal=Namenode Principal
 HadoopClusterForm.text.jtPrincipal=Jobtracker Principal
 HadoopClusterForm.text.rmPrincipal=Resource Manager Principal
+HadoopClusterForm.text.jobHistoryPrincipal=Job History Principal
 HadoopClusterForm.button.keytab=Use a keytab to authenticate 
 HadoopClusterForm.text.keytabPrincipal=Principal
 HadoopClusterForm.text.userName=User name
@@ -52,6 +53,8 @@ HadoopClusterForm.check.namenodePrincipal=Namenode Principal must be specified
 HadoopClusterForm.check.namenodePrincipal.invalid=Namenode Principal is invalid
 HadoopClusterForm.check.jtOrRmPrincipal={0} must be specified
 HadoopClusterForm.check.jtOrRmPrincipal.invalid={0} is invalid
+HadoopClusterForm.check.jobHistoryPrincipal=Job History Principal must be specified
+HadoopClusterForm.check.jobHistoryPrincipal.invalid=Job History Principal is invalid
 HadoopClusterForm.check.keytabPrincipal=Principal must be specified
 HadoopClusterForm.check.keytabPrincipal.invalid=Principal is invalid
 HadoopClusterForm.check.keytab=Keytab must be specified
