--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages_en.properties
@@ -2,8 +2,8 @@ HELP=org.talend.help.tCassandraOutputBulk
 LONG_NAME=Generate SSTable
 SCHEMA.NAME=Schema
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
 HOST.NAME=Host
 PORT.NAME=Port
@@ -25,4 +25,3 @@ COMPARATOR.ITEM.TIMEUUIDTYPE=TimeUUIDType
 COMPARATOR.ITEM.UTF8TYPE=UTF8Type
 BUFFER_SIZE.NAME=Buffer size(MB)
 SSTABLE_STORE_PATH.NAME=SSTable directory
-DB_VERSION.ITEM.CASSANDRA_2_0_8=Cassandra 2.0.8
