--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages_fr.properties
@@ -1,2 +1,10 @@
 HELP=org.talend.help.tCassandraOutputBulk
 LONG_NAME=Génère une SSTable
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
+REQUIRED_AUTHENTICATION.NAME=Authentification requise
+KEY_SPACE.NAME=Keyspace
+COLUMN_FAMILY.NAME=Famille de la colonne
+PARTITIONER.ITEM.RANDOMPARTITIONER=Aléatoire
+COMPARATOR.NAME=Comparateur de noms de colonnes
+BUFFER_SIZE.NAME=Taille de la mémoire tampon (Mo)
