--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_en.properties
@@ -15,10 +15,10 @@ REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 CONNECTION.NAME=Connection
 AUTHENTICATION.NAME=Authentication
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X
-DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X
+DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X (Deprecated)
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X
+DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X (Deprecated)
 DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 SET_READ_PREFERENCE.NAME=Set read preference
 READ_PREFERENCE.NAME=Read Preference
