--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages_ja.properties
@@ -1,3 +1,4 @@
+DATABASE.NAME=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9
 HELP=org.talend.help.tMongoDBConnection
 HOST.NAME=\u30B5\u30FC\u30D0
 LONG_NAME=MongoDB\u3078\u306E\u63A5\u7D9A\u3092\u4F5C\u6210
