--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_en.properties
@@ -46,8 +46,8 @@ SUPER_KEY_COLUMN.NAME=Super column key
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
 COMPARATOR.NAME=Column name comparator
 COMPARATOR.ITEM.ASCIITYPE=AsciiTYPE
@@ -57,4 +57,3 @@ COMPARATOR.ITEM.LONGTYPE=LongType
 COMPARATOR.ITEM.TIMEUUIDTYPE=TimeUUIDType
 COMPARATOR.ITEM.UTF8TYPE=UTF8Type
 DEFINE_CF_STRUCTS.NAME=Define column family structure
-DB_VERSION.ITEM.CASSANDRA_2_0_8=Cassandra 2.0.8
