--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_ja.properties
@@ -16,6 +16,7 @@ ACTION_ON_KEYSPACE.ITEM.DROP_IF_EXISTS_AND_CREATE=Keyspace\u304C\u5B58\u5728\u30
 ACTION_ON_KEYSPACE.ITEM.NONE=\u306A\u3057
 ACTION_ON_KEYSPACE.NAME=Keyspace\u64CD\u4F5C
 BATCH_SIZE.NAME=\u30D0\u30C3\u30C1\u30B5\u30A4\u30BA
+CLUSTER.NAME=\u30AF\u30E9\u30B9\u30BF
 COLUMN_FAMILY.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA
 COLUMN_FAMILY_CONFIGURATION.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA\u8A2D\u5B9A
 COLUMN_FAMILY_TYPE.ITEM.STANDARD=\u6A19\u6E96
@@ -40,5 +41,5 @@ PROPERTYADVANCED.NAME=\u30D7\u30ED\u30D1\u30C6\u30A3\u306E\u8A73\u7D30
 SUPER_KEY_COLUMN.NAME=\u30B9\u30FC\u30D1\u30FC\u30AB\u30E9\u30E0\u30AD\u30FC
 USERNAME.NAME=\u30E6\u30FC\u30B6\u540D
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
