--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_en.properties
@@ -19,7 +19,6 @@ REQUIRED_AUTHENTICATION.NAME=Required authentication
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
-DB_VERSION.ITEM.CASSANDRA_2_0_8=Cassandra 2.0.8
