--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_ja.properties
@@ -15,5 +15,5 @@ PROPERTYADVANCED.NAME=\u30D7\u30ED\u30D1\u30C6\u30A3\u306E\u8A73\u7D30
 QUERY.NAME=\u30AF\u30A8\u30EA
 USERNAME.NAME=\u30E6\u30FC\u30B6\u540D
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2
-DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
