--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBBulkLoad/tMongoDBBulkLoad_messages_fr.properties
@@ -4,6 +4,7 @@ COLLECTION.NAME=Collection
 CONNECTION.NAME=Connexion
 DATA.NAME=Fichier de données
 DATABASE.NAME=Base de données
+DATA_ACTION.ITEM.INSERT=Insert
 DATA_ACTION.ITEM.UPSERT=Upsert
 DATA_ACTION.NAME=Action sur les données
 DROP_COLLECTION_CREATE.NAME=Supprimer la collection si elle existe
@@ -21,3 +22,4 @@ PASSWORD.NAME=Mot de passe
 REQUIRED_AUTHENTICATION.NAME=Authentification requise
 UPSERT_FIELDS.ITEM.COLNAME=Colonne du schéma
 USE_LOCAL_DBPATH.NAME=Utiliser le chemin de la base de données locale
+JSON_ARRAY.NAME=Le fichier JSON commence par un tableau
