--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages_fr.properties
@@ -20,7 +20,7 @@ USERNAME.NAME=Utilisateur
 USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
 AUTHENTICATION.NAME=Authentification
 DB_VERSION.NAME=Version de la base de données
-DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X
-DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X
+DB_VERSION.ITEM.MONGODB_2_2_3=MongoDB 2.2.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_2_1_2=MongoDB 2.1.X (Deprecated)
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X
+DB_VERSION.ITEM.MONGODB_2_4_X=MongoDB 2.4.X (Deprecated)
