--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages_ja.properties
@@ -1,4 +1,5 @@
 COLLECTION.NAME=\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
+DATABASE.NAME=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9
 HOST.NAME=\u30B5\u30FC\u30D0
 HELP=org.talend.help.tMongoDBInput
 LIMIT.NAME=\u30ea\u30df\u30c3\u30c8
@@ -7,6 +8,7 @@ PASSWORD.NAME=\u30D1\u30B9\u30EF\u30FC\u30C9
 PORT.NAME=\u30DD\u30FC\u30C8
 PROPERTY.NAME=\u30D7\u30ED\u30D1\u30C6\u30A3
 QUERY.NAME=\u30AF\u30A8\u30EA
+SORT.ITEM.COLNAME=\u30AB\u30E9\u30E0
 USERNAME.NAME=\u30E6\u30FC\u30B6\u540D
 AUTHENTICATION.NAME=\u8A8D\u8A3C
 DB_VERSION.NAME=DB Version
