--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_ja.properties
@@ -2,6 +2,7 @@ AUTHENTICATION.NAME=\u8A8D\u8A3C
 COLLECTION.NAME=\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 COMPACT_FORMAT.NAME=\u30B3\u30F3\u30D1\u30AF\u30C8\u5F62\u5F0F
 CONNECTION.NAME=\u30B3\u30F3\u30DD\u30FC\u30CD\u30F3\u30C8\u30EA\u30B9\u30C8
+DATABASE.NAME=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9
 DATA_NODE.NAME=\u30C7\u30FC\u30BF\u30CE\u30FC\u30C9
 DATA_ACTION.ITEM.DELETE=\u524A\u9664
 DATA_ACTION.ITEM.INSERT=\u633F\u5165
