--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_ja.properties
@@ -1,4 +1,5 @@
 COMMAND.NAME=\u30B3\u30DE\u30F3\u30C9
+DATABASE.NAME=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9
 DIE_ON_ERROR.NAME=\u30A8\u30E9\u30FC\u3067\u505C\u6B62
 EXECUTE_COMMAND.NAME=\u5B9F\u884C\u30B3\u30DE\u30F3\u30C9
 FUNCTION.NAME=\u6A5F\u80FD
